# PkmBoy

./: .gitignore  CMakeLists.txt  Makefile  README.md  Roadmap.md
assets/indoor/: house.map
assets/map/: house.map  outdoor.map
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
include/: AssetManager.h  Collision.h  GUIManager.h  Game.h  Map.h  Resources.h  TextureManager.h  Vector2D.h
resources/: outdoor_Tile Layer 1.csv  pkmn_color_pallete.aseprite
src/: AssetManager.cpp  Collision.cpp  ECS.cpp  GUIManager.cpp  Game.cpp  Map.cpp  Resources.cpp  Vector2D.cpp  main.cpp
src/ECS/: Animation.h  ColliderComponent.h  Components.h  ECS.h  GUI.h  GUILabel.h  KeyboardController.h  SpriteComponent.h  TileComponent.h  TransformComponent.h  TriggerComponent.h
